--- a/style.css
+++ b/style.css
@@ -262,6 +262,12 @@ p {
 	animation-delay: 2.5s;
 }
 
+.heroImg{
+    position: relative;
+    left: 15%;
+    width: 53%;
+}
+
 /* End Hero Section */
 
 /* Services Section */
